--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x]  # o la versión que usás
+        node-version: [18.x]
 
     steps:
       - name: Checkout code
